src/style.css
/* ~~ MAIN STYLESHEET FOR COLLISTERU.NET ~~ */

:root {
  --maxWidth-none: "none";
  --maxWidth-xs: 20rem;
  --maxWidth-sm: 24rem;
  --maxWidth-md: 28rem;
  --maxWidth-lg: 32rem;
  --maxWidth-xl: 36rem;
  --maxWidth-2xl: 42rem;
  --maxWidth-3xl: 48rem;
  --maxWidth-4xl: 56rem;
  --maxWidth-full: "100%";
  --maxWidth-wrapper: var(--maxWidth-2xl);
  --spacing-px: "1px";
  --spacing-0: 0;
  --spacing-1: 0.25rem;
  --spacing-2: 0.5rem;
  --spacing-3: 0.75rem;
  --spacing-4: 1rem;
  --spacing-5: 1.25rem;
  --spacing-6: 1.5rem;
  --spacing-8: 2rem;
  --spacing-10: 2.5rem;
  --spacing-12: 3rem;
  --spacing-16: 4rem;
  --spacing-20: 5rem;
  --spacing-24: 6rem;
  --spacing-32: 8rem;
  --fontFamily-sans: "MontserratVariable", system-ui, -apple-system,
    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
    "Noto Color Emoji";
  --fontFamily-serif: "Charis SIL", "sans-serif";

  --font-body: var(--fontFamily-serif);
  --font-heading: var(--fontFamily-seif);
  --fontWeight-normal: 400;
  --fontWeight-bold: 700;
  --fontWeight-black: 900;
  --fontSize-root: 16px;
  --lineHeight-none: 1;
  --lineHeight-tight: 1.1;
  --lineHeight-normal: 1.5;
  --lineHeight-relaxed: 1.625;
  /* 1.200 Minor Third Type Scale */
  --fontSize-neg1: 0.694em;
  --fontSize-0: 0.833rem;
  --fontSize-1: 1rem;
  --fontSize-2: 1.2rem;
  --fontSize-3: 1.44rem;
  --fontSize-4: 1.728rem;
  --fontSize-5: 2.074rem;
  --fontSize-6: 2.488rem;
  --fontSize-7: 2.986rem;
  --red: #800020;
  --gold: #ffd700;
  --green: #013220;
  --light-blue: #000080;
  --dark-blue: #000034;
  --purple: #714194;
  --yellow: #cca278;
  --beige: #ddc7ad;
  --brown: #541d01;
  --white: #edece1;
  --black: #0f0f0f;
  --color-text: var(--black);
  --color-text-light: #4f5969;
  --color-heading: #1a202c;
  --color-heading-black: black;
  --color-accent: #d1dce5;

  background-color: var(--dark-blue);
}

/* HTML elements */

*,
:after,
:before {
  box-sizing: border-box;
}

html {
  line-height: var(--lineHeight-normal);
  font-size: var(--fontSize-root);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  font-family: var(--font-body);
  font-size: var(--fontSize-1);
  color: var(--color-text);
  text-align: center;
  margin: 0;
  padding: 0;
  min-height: 100vh; /* Ensure that the body takes at least the full viewport height */
  position: relative;
}

footer {
  padding: var(--spacing-6) var(--spacing-0);
}

header {
  background-color: var(--white);
}

main {
  background-color: var(--white);
  margin-bottom: 50px; /* height of the footer */
}

hr {
  height: 1px;
  border: 0;
}

/* ~~TEXT CLASSES~~ */

/* Center-justified text for main content paragraphs */

p {
  text-align: justify;
  font-family: "Source Serif Regular";
}

bdo {
  text-align: right;
}

/* ~~ Math ~~ */

.math {
  text-align: center;
  line-height: 2.2;
}

span.math {
  text-align: center;
  line-height: 2.2;
}

strong {
  color: black;
  font-family: "Source Serif Bold";
}

em {
  color: rgb(80, 80, 50);
  font-family: "Source Serif Italic";
}

/* ~~ Blockquote Styling ~~ */

blockquote {
  padding: 60px 0px 40px;
  position: relative;
}

blockquote::before {
  color: black;
  content: "";
  left: 50%;
  margin-left: -100px;
  position: absolute;
  border-bottom: 3px solid rgb(0, 0, 0, 0.3);
  height: 3px;
  width: 200px;
}

blockquote::after {
  color: black;
  content: "";
  bottom: 20px;
  left: 50%;
  margin-left: -100px;
  position: absolute;
  border-bottom: 3px solid rgb(0, 0, 0, 0.3);
  height: 3px;
  width: 200px;
}

blockquote p {
  color: rgba(30, 30, 0);
  font-size: var(--fontSize-neg1);
  margin-bottom: var(--spacing-0);
  color: var(--color-text-light);
}

cite {
  font-size: var(--fontSize-0);
  font-family: "Source Serif Regular";
  font-weight: bold;
  color: rgba(30, 30, 0);
  text-align: right;
  display: block;
}

/*Heading One: Article Titles*/
h1 {
  font-size: var(--fontSize-7);
  color: rgb(48, 40, 67);
  font-family: "Source Serif Bold";
  text-align: center;
  font-variant: small-caps;
}

/*Heading Two: Section Titles*/
h2 {
  font-size: var(--fontSize-5);

  text-align: center;

  color: rgb(48, 40, 67);
  font-family: "Source Serif Bold";
  font-variant: small-caps;
}

/*Heading Three: SubsectionTitles*/
h3 {
  text-align: center;
  font-size: var(--fontSize-3);
  font-family: "Source Serif Regular";
  font-variant: small-caps;
}

h4 {
  font-size: var(--fontSize-2);
  font-family: "Source Serif Regular";
  font-variant: small-caps;
}

h5 {
  font-size: var(--fontSize-1);
  font-variant: small-caps;
}

h3.heading-blue {
  color: var(--heading-blue);
}

h3.heading-red {
  color: var(--heading-red);
}

h3.heading-green {
  color: var(--heading-green);
}

/* Prose */

p {
  line-height: var(--lineHeight-relaxed);
  --baseline-multiplier: 0.179;
  --x-height-multiplier: 0.35;
  padding: var(--spacing-0);
}

/* ~~CODE BLOCKS~~ */

.gatsby-highlight {
  font-family: "Source Code Pro", monospace;
  font-size: 0.9em;
  line-height: 1.5;
  margin: 0;
  overflow: auto;
  border-radius: 4px;
  background: black;
}

pre[class*="language-"] {
  padding-top: 0 !important;
  padding-bottom: 0 !important;
  overflow: auto;
}

/* ~~ LISTS ~~ */

/* ~~Unordered Lists~~ */

ul {
  list-style-type: disc;
  list-style-position: outside;
  text-align: left;
}

ul li {
  font-family: "Source Serif Regular";
  font-size: 8;
  color: rgb(71, 66, 42);
}

/* ~~Ordered Lists~~ */

ol {
  list-style-position: outside;
  text-align: left;
}

li {
  color: rgb(71, 66, 42);
  font-family: "Source Serif Regular";
}

quotesource {
  display: flex;
  padding-top: 0;
  margin-top: 0;
  padding-left: 5%;
  font-weight: bold;
  margin-bottom: var(--spacing-6);
}
/* ~~TABLES~~ */

table {
  border: 4px double;
  border-collapse: collapse;

  margin: auto;
  width: 95%;

  text-align: left;
  font-family: "Source Serif Regular";

  table-layout: fixed;
}

/* Table header */
table th {
  border: 1px solid;
  padding: 10px; /* Adds space inside cells */
  border: 1px solid #ccc; /* Adds border to each cell */
  word-wrap: break-word; /* Ensures text wraps to prevent overflow */
}

table tr,
table td {
  table-layout: auto;
  border: 1px solid;
  padding: 5px;
  font-family: "Source Serif Regular";
  color: black;
  padding: 10px; /* Adds space inside cells */
  word-wrap: break-word; /* Ensures text wraps to prevent overflow */
  min-width: 100px; /* Minimum width of the description cell */
  max-width: 600px; /* Maximum width before the text wraps */
}

/* ~~TABLE OF WRITINGS~~ */

table {
  border-color: black;
  /* Todo: Customize this further */
}

/* ~~ Links ~~ */

a {
  color: var(--light-blue);
  font-weight: bold;
  text-decoration: underline;
}

/* Style links to different websites */
a[href^="http"] {
  font-weight: bold;
  color: #006400;
}

/* Style links to different pages on your own website */
a:not([href^="http"]) {
  font-weight: bold;
}

a:hover,
a:focus {
  color: var(--color-text-light);
}

/* ~~ Footnotes ~~ */

/* This element is for a single footnote body */
.footnotes {
  float: footnote;
  font-size: var(--fontSize-neg1);
}

/* ~~IMAGES~~ */

img {
  border-style: solid;
  border-width: 4px;
  border-color: var(--dark-blue);
  max-width: 100%;
  margin: auto;
  width: 60%;
  perspective: 1px;
}

/** Image Styles **/

/* Icons don't have borders */
.icon {
  border-width: 0px;
}

.pixel {
  image-rendering: pixelated;
}

.pixel_footer {
  image-rendering: pixelated;
  width: 100%;
  margin: 0px;
  padding: 0px;
  border-width: 0px;
}

.badge {
  border-width: 0px;
  margin: 3px;
  width: auto;
  height: 20px;
}

/* Header */

/* ~~USE MEDIA QUERIES TO MAKE SIZES CHANGE DEPENDING ON THE SIZE OF THE VIEWPORT!! */

/* Styles for screens larger than 768px
@media (min-width: 768px) {
    .element {
        background-color: green;
        font-size: 18px;
    }
} */

/* Styles for screens smaller than 768px */
/* @media (max-width: 768px) {
    .element {
        background-color: red;
        font-size: 14px;
    }
} */

.global-wrapper {
  margin: var(--spacing-0) auto;
  width: 100%;
  padding: 0;
  min-height: 100vh; /* Ensure the body takes at least the full height of the viewport */
  display: flex;
  flex-direction: column;
}

.global-header {
  height: 130px;
  width: 100%;
  margin-bottom: var(--spacing-12);
  display: flex;
  align-items: center;
  padding-left: 5%;
}

@media (max-width: 1000px) {
  .global-header {
    padding-right: 5%;
  }
}

@media (max-width: 600px) {
  .global-header {
    height: 160px;
  }
}

.header-container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-left: 0;
}

@media (max-width: 1000px) {
  .header-container {
    display: inline;
  }
}

.minor-header-links-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row-reverse;
  margin-right: 10%;
  margin-left: 215px;
}

@media (max-width: 1000px) {
  .minor-header-links-container {
    margin-left: 0px;
  }
}

@media (max-width: 600px) {
  .minor-header-links-container {
    display: grid;
    grid-template-columns: repeat(
      2,
      1fr
    ); /* Creates four equal-width columns */
    grid-template-rows: repeat(
      2,
      auto
    ); /* Creates four rows with automatic height */
    gap: 10px; /* Adjust this value to control the space between grid items */
    margin-right: 10%;
    margin-left: 0px;
  }
}

.minor-header-link {
  margin-left: 10%;
  font-weight: bold;
  font-size: 1.5em;
  text-decoration: none;
  color: gray;
}

@media (max-width: 1000px) {
  .minor-header-link {
    margin-left: 0px;
  }
}

.header-link-home {
  display: flex;
  align-items: center;
  padding: 10%;
}

.filler-150px {
  height: 150px;
}

.filler-100px {
  height: 100px;
}

#content {
  width: 50%;
  margin: 0 auto; /* Center Div */
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 1px;
}

.global-footer {
  background-color: var(--light-blue);
  color: var(--white);
  height: 100px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  text-align: center; /* Center content horizontally */
}

.main-heading {
  font-size: var(--fontSize-7);
  margin: 0;
}

/* Overrides link color */
.main-heading a {
  color: black;
  text-decoration: none;
}

h2 a {
  color: black;
  text-decoration: none;
}

.gatsby-highlight {
  background-color: inherit;
  padding: 0px;
}

/* ~~MISCELLANEOUS~~ */

hr {
  border: 1px solid rgb(0, 0, 0, 0.3);
  max-width: 30%;
}

/* END USER-DEFINED STYLESHEET */
/* ========================== */

